Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,14 @@ header {
   background-color: #e2e2e2;
 }
 
+header h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: left;
+}
+
 .nav li {
   display: inline-block;
   list-style-type: none;
